# PWr-MO

./: .gitignore  README.md
gcp/: .gitignore  CMakeLists.txt  Makefile  main.cpp  plot_heatmaps.jl
gcp/csv/crossover/dx/: plot_queen6_6.col.csv  plot_queen7_7.col.csv  plot_queen8_8.col.csv  results_queen6_6.col.csv  results_queen7_7.col.csv  results_queen8_8.col.csv
gcp/csv/crossover/px/: plot_queen6_6.col.csv  plot_queen7_7.col.csv  plot_queen8_8.col.csv  (+3 more)
gcp/csv/tuning/: queen6_6_subgroup2.csv  queen6_6_subgroup3.csv  queen6_6_subgroup4.csv  queen6_6_subgroup5.csv  queen7_7_subgroup2.csv  queen7_7_subgroup3.csv  queen7_7_subgroup4.csv  queen7_7_subgroup5.csv  queen8_8_subgroup2.csv  queen8_8_subgroup3.csv  queen8_8_subgroup4.csv  queen8_8_subgroup5.csv  sa.csv  subgroup5.csv  subgroup6.csv  subgroup7.csv  subgroup8.csv
gcp/include/: genetic_solver.h  genetic_solver.hpp  graph.h  graph.hpp  linkage_tree_builder.hpp  loader.h  loader.hpp  ltgomea_solver.hpp  model.h  model.hpp  p3_solver.hpp  solver.h  solver.hpp  subpopulation.hpp  utility_operators.h  utility_operators.hpp  vertex.h  vertex.hpp
gcp/include/enums/: crossover_type.hpp  population_type.hpp
gcp/include/structs/: model_params.h  model_params.hpp  solution.h  solution.hpp
gcp/instances/: mulsol.i.2.col  myciel4.col  myciel5.col  myciel6.col  myciel7.col  queen5_5.col  queen6_6.col  queen7_7.col  queen8_8.col  zeroin.i.2.col
gcp/src/: genetic_solver.cpp  graph.cpp  linkage_tree_builder.cpp  loader.cpp  ltgomea_solver.cpp  model.cpp  p3_solver.cpp  solver.cpp  subpopulation.cpp  vertex.cpp
(+173 files in other folders)
